--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>Kundalini Yoga: The Most Dangerous Form of Yoga | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 12 vs OONI VOLT 2 - Electric Pizza Oven Comparison</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -785,7 +785,7 @@
                     <div class="video-info">
                         <h3>Understanding the Pain-Body | A Special 3 Part Compilation from Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -2316,7 +2316,7 @@
                     <div class="video-info">
                         <h3>Linguine, Clams, & White Wine: Chef POV 🍝😜 #pasta #food #cooking #chef #shorts</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 05, 2025</div>
                     </div>
                 </a>
             </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Kundalini Yoga: The Most Dangerous Form of Yoga | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7524,7 +7524,7 @@
                         <div class="video-info">
                             <h3>Understanding the Pain-Body | A Special 3 Part Compilation from Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 12 vs OONI VOLT 2 - Electric Pizza Oven Comparison</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8999,7 +8999,7 @@
                         <div class="video-info">
                             <h3>Linguine, Clams, & White Wine: Chef POV 🍝😜 #pasta #food #cooking #chef #shorts</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 05, 2025</div>
                         </div>
                     </a>
                 </div>
