--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Kundalini Yoga: The Most Dangerous Form of Yoga | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>OONI VOLT 12 vs OONI VOLT 2 - Electric Pizza Oven Comparison</h3>
                         <div class="channel">Tom Voyage</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Kundalini Yoga: The Most Dangerous Form of Yoga | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>OONI VOLT 12 vs OONI VOLT 2 - Electric Pizza Oven Comparison</h3>
                             <div class="channel">Tom Voyage</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
